base-vpc.template
{
  "AWSTemplateFormatVersion": "2010-09-09",
  "Description": "VPC template with network 172.x.y.z to emulate a simple 2 AZ, 2 subnet pub priv Cloud Ops VPC but with a bastion instance",
  "Parameters": {
    "MyZone1": {"Type":"String","Default":"a","Description":"1st zone to utilize in this VPC"},
    "MyZone2": {"Type":"String","Default":"c","Description":"2nd zone to utilize in this VPC"},
    "KeyName": {"Type":"String","Default":""},
    "SSHLocation": {"Description":"Lockdown SSH access to the bastion host (default can be accessed from anywhere)","Type":"String","MinLength":"9","MaxLength":"18","Default":"0.0.0.0/0","AllowedPattern":"(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})/(\\d{1,2})","ConstraintDescription":"must be a valid CIDR range of the form x.x.x.x/x."},
    "BastionInstanceType": {"Type":"String","Default":"m3.medium"},
    "CIDRPrefix": {"Type":"String","Default":"172.28"},
    "NATInstanceType": {"Description":"NET Device EC2 instance type","Type":"String","Default":"m3.large"}
  },
  "Mappings": {
    "AWSNATAMI": {
      "us-east-1":{"AMI":"ami-c6699baf"},
      "us-west-2":{"AMI":"ami-52ff7262"},
      "us-west-1":{"AMI":"ami-7da94839"},
      "eu-west-1":{"AMI":"ami-0b5b6c7f"},
      "ap-southeast-1":{"AMI":"ami-02eb9350"},
      "ap-southeast-2":{"AMI":"ami-ab990e91"},
      "ap-northeast-1":{"AMI":"ami-14d86d15"},
      "sa-east-1":{"AMI":"ami-0439e619"}
    },
    "AWSInstanceType2Arch": {
      "m3.xlarge":{"Arch":"64"},
      "m3.medium":{"Arch":"64"},
      "m3.2xlarge":{"Arch":"64"}
    },
    "AWSRegionArch2AMI": {
      "us-east-1":{ "32":"ami-a0cd60c9", "64":"ami-aecd60c7", "64Cluster":"ami-a8cd60c1","64GPU":"ami-eccf6285"},
      "us-west-2":{"32":"ami-46da5576","64":"ami-48da5578", "64Cluster":"NOT_YET_SUPPORTED","64GPU":"NOT_YET_SUPPORTED"},
      "us-west-1":{"32":"ami-7d4c6938","64":"ami-734c6936","64Cluster":"NOT_YET_SUPPORTED","64GPU":"NOT_YET_SUPPORTED"},
      "eu-west-1":{"32":"ami-61555115","64":"ami-6d555119","64Cluster":"ami-67555113","64GPU":"NOT_YET_SUPPORTED"},
      "ap-southeast-1":{"32":"ami-220b4a70","64":"ami-3c0b4a6e","64Cluster":"NOT_YET_SUPPORTED","64GPU":"NOT_YET_SUPPORTED"},
      "ap-southeast-2":{"32":"ami-b3990e89","64":"ami-bd990e87","64Cluster":"NOT_YET_SUPPORTED","64GPU":"NOT_YET_SUPPORTED"},
      "ap-northeast-1":{"32":"ami-2a19aa2b","64":"ami-2819aa29","64Cluster":"NOT_YET_SUPPORTED","64GPU":"NOT_YET_SUPPORTED"},
      "sa-east-1":{"32":"ami-f836e8e5","64":"ami-fe36e8e3","64Cluster":"NOT_YET_SUPPORTED","64GPU":"NOT_YET_SUPPORTED"}
    },
    "SubnetConfig": {
      "VPC":{"CIDR":"172.25.0.0/16"},
      "Public":{"CIDR":"172.25.1.0/24"},
      "Public2":{"CIDR":"172.25.2.0/24"},
      "Private":{"CIDR":"172.25.11.0/24"},
      "Private2":{"CIDR":"172.25.12.0/24"}
    }
  },
  "Resources": {
    "VPC": {"Type":"AWS::EC2::VPC","Properties":{"CidrBlock":{"Fn::FindInMap":["SubnetConfig","VPC","CIDR"]},"Tags":[{"Key":"Application","Value":{"Ref":"AWS::StackId"}},{"Key":"Network","Value":"Public"}]}},
    "PublicSubnet": {"Type":"AWS::EC2::Subnet","Properties":{"VpcId":{"Ref":"VPC"},"AvailabilityZone":{"Fn::Join":["",[{"Ref":"AWS::Region"},{"Ref":"MyZone1"}]]},"CidrBlock":{"Fn::FindInMap":["SubnetConfig","Public","CIDR"]},"Tags":[{"Key":"Application","Value":{"Ref":"AWS::StackId"}},{"Key":"Network","Value":"Public"}]}},
    "Public2Subnet": {"Type":"AWS::EC2::Subnet","Properties":{"VpcId":{"Ref":"VPC"},"AvailabilityZone":{"Fn::Join":["",[{"Ref":"AWS::Region"},{"Ref":"MyZone2"}]]},"CidrBlock":{"Fn::FindInMap":["SubnetConfig","Public2","CIDR"]},"Tags":[{"Key":"Application","Value":{"Ref":"AWS::StackId"}},{"Key":"Network","Value":"Public2"}]}},
    "InternetGateway": {"Type":"AWS::EC2::InternetGateway","Properties":{"Tags":[{"Key":"Application","Value":{"Ref":"AWS::StackId"}},{"Key":"Network","Value":"Public"}]}},
    "GatewayToInternet": {"Type":"AWS::EC2::VPCGatewayAttachment","Properties":{"VpcId":{"Ref":"VPC"},"InternetGatewayId":{"Ref":"InternetGateway"}}},
    "PublicRouteTable": {"Type":"AWS::EC2::RouteTable","Properties":{"VpcId":{"Ref":"VPC"},"Tags":[{"Key":"Application","Value":{"Ref":"AWS::StackId"}},{"Key":"Network","Value":"Public2"}]}},
    "PublicRoute": {"Type":"AWS::EC2::Route","DependsOn":"GatewayToInternet","Properties":{"RouteTableId":{"Ref":"PublicRouteTable"},"DestinationCidrBlock":"0.0.0.0/0","GatewayId":{"Ref":"InternetGateway"}}},
    "PublicSubnetRouteTableAssociation": {"Type":"AWS::EC2::SubnetRouteTableAssociation","Properties":{"SubnetId":{"Ref":"PublicSubnet"},"RouteTableId":{"Ref":"PublicRouteTable"}}},
    "Public2SubnetRouteTableAssociation": {"Type":"AWS::EC2::SubnetRouteTableAssociation","Properties":{"SubnetId":{"Ref":"Public2Subnet"},"RouteTableId":{"Ref":"PublicRouteTable"}}},
    "PrivateSubnet": {"Type":"AWS::EC2::Subnet","Properties":{"VpcId":{"Ref":"VPC"},"AvailabilityZone":{"Fn::Join":["",[{"Ref":"AWS::Region"},{"Ref":"MyZone1"}]]},"CidrBlock":{"Fn::FindInMap":["SubnetConfig","Private","CIDR"]},"Tags":[{"Key":"Application","Value":{"Ref":"AWS::StackId"}},{"Key":"Network","Value":"Private"}]}},
    "Private2Subnet": {"Type":"AWS::EC2::Subnet","Properties":{"VpcId":{"Ref":"VPC"},"AvailabilityZone":{"Fn::Join":["",[{"Ref":"AWS::Region"},{"Ref":"MyZone2"}]]},"CidrBlock":{"Fn::FindInMap":["SubnetConfig","Private2","CIDR"]},"Tags":[{"Key":"Application","Value":{"Ref":"AWS::StackId"}},{"Key":"Network","Value":"Private2"}]}},
    "PrivateRouteTable": {"Type":"AWS::EC2::RouteTable","Properties":{"VpcId":{"Ref":"VPC"},"Tags":[{"Key":"Application","Value":{"Ref":"AWS::StackId"}},{"Key":"Network","Value":"Private"}]}},
    "Private2RouteTable": {"Type":"AWS::EC2::RouteTable","Properties":{"VpcId":{"Ref":"VPC"},"Tags":[{"Key":"Application","Value":{"Ref":"AWS::StackId"}},{"Key":"Network","Value":"Private2"}]}},
    "PrivateSubnetRouteTableAssociation": {"Type":"AWS::EC2::SubnetRouteTableAssociation","Properties":{"SubnetId":{"Ref":"PrivateSubnet"},"RouteTableId":{"Ref":"PrivateRouteTable"}}},
    "Private2SubnetRouteTableAssociation": {"Type":"AWS::EC2::SubnetRouteTableAssociation","Properties":{"SubnetId":{"Ref":"Private2Subnet"},"RouteTableId":{"Ref":"Private2RouteTable"}}},
    "PrivateRoute": {"Type":"AWS::EC2::Route","Properties":{"RouteTableId":{"Ref":"PrivateRouteTable"},"DestinationCidrBlock":"0.0.0.0/0","InstanceId":{"Ref":"NATDevice"}}},
    "Private2Route": {"Type":"AWS::EC2::Route","Properties":{"RouteTableId":{"Ref":"Private2RouteTable"},"DestinationCidrBlock":"0.0.0.0/0","InstanceId":{"Ref":"NATDevice"}}},
    "NATDevice": {"Type":"AWS::EC2::Instance","Properties":{"InstanceType":{"Ref":"NATInstanceType"},"KeyName":{"Ref":"KeyName"},"SubnetId":{"Ref":"PublicSubnet"},"SourceDestCheck":"false","ImageId":{"Fn::FindInMap":["AWSNATAMI",{"Ref":"AWS::Region"},"AMI"]},"SecurityGroupIds":[{"Ref":"NATSecurityGroup"}]}},
    "NAT2Device": {"Type":"AWS::EC2::Instance","Properties":{"InstanceType":{"Ref":"NATInstanceType"},"KeyName":{"Ref":"KeyName"},"SubnetId":{"Ref":"Public2Subnet"},"SourceDestCheck":"false","ImageId":{"Fn::FindInMap":["AWSNATAMI",{"Ref":"AWS::Region"},"AMI"]},"SecurityGroupIds":[{"Ref":"NATSecurityGroup"}]}},
    "NATSecurityGroup": {"Type":"AWS::EC2::SecurityGroup","Properties":{"GroupDescription":"Enable internal access to the NAT device","VpcId":{"Ref":"VPC"},"SecurityGroupIngress":[{"IpProtocol":"tcp","FromPort":"80","ToPort":"80","CidrIp":"0.0.0.0/0"},{"IpProtocol":"tcp","FromPort":"443","ToPort":"443","CidrIp":"0.0.0.0/0"},{"IpProtocol":"tcp","FromPort":"22","ToPort":"22","CidrIp":{"Ref":"SSHLocation"}}],"SecurityGroupEgress":[{"IpProtocol":"tcp","FromPort":"80","ToPort":"80","CidrIp":"0.0.0.0/ [...]
    "BastionIPAddress": {"Type":"AWS::EC2::EIP","DependsOn":"GatewayToInternet","Properties":{"Domain":"vpc","InstanceId":{"Ref":"BastionHost"}}},
    "BastionHost": {"Type":"AWS::EC2::Instance","Properties":{"InstanceType":{"Ref":"BastionInstanceType"},"KeyName":{"Ref":"KeyName"},"SubnetId":{"Ref":"PublicSubnet"},"ImageId":{"Fn::FindInMap":["AWSRegionArch2AMI",{"Ref":"AWS::Region"},{"Fn::FindInMap":["AWSInstanceType2Arch",{"Ref":"BastionInstanceType"},"Arch"]}]},"SecurityGroupIds":[{"Ref":"BastionSecurityGroup"}]}},
    "BastionSecurityGroup": {"Type":"AWS::EC2::SecurityGroup","Properties":{"GroupDescription":"Enable access to the Bastion host","VpcId":{"Ref":"VPC"},"SecurityGroupIngress":[{"IpProtocol":"tcp","FromPort":"22","ToPort":"22","CidrIp":{"Ref":"SSHLocation"}}],"SecurityGroupEgress":[{"IpProtocol":"tcp","FromPort":"22","ToPort":"22","CidrIp":{"Fn::FindInMap":["SubnetConfig","Private","CIDR"]}}]}},
    "PublicLoadBalancerSecurityGroup": {"Type":"AWS::EC2::SecurityGroup","Properties":{"GroupDescription":"Public ELB Security Group with HTTP access on port 80 from the internet","VpcId":{"Ref":"VPC"},"SecurityGroupIngress":[{"IpProtocol":"tcp","FromPort":"80","ToPort":"80","CidrIp":"0.0.0.0/0"},{"IpProtocol":"tcp","FromPort":"8000","ToPort":"8000","CidrIp":"0.0.0.0/0"}],"SecurityGroupEgress":[{"IpProtocol":"tcp","FromPort":"80","ToPort":"80","CidrIp":"0.0.0.0/0"},{"IpProtocol":"tcp","FromPort" [...]
    "FrontendSecurityGroup": {"Type":"AWS::EC2::SecurityGroup","Properties":{"GroupDescription":"Allow access from load balancer and bastion as well as outbound HTTP and HTTPS traffic","VpcId":{"Ref":"VPC"},"SecurityGroupIngress":[{"IpProtocol":"tcp","FromPort":"80","ToPort":"80","SourceSecurityGroupId":{"Ref":"PublicLoadBalancerSecurityGroup"}}],"SecurityGroupEgress":[{"IpProtocol":"tcp","FromPort":"80","ToPort":"80","CidrIp":"0.0.0.0/0"},{"IpProtocol":"tcp","FromPort":"443","ToPort":"443","Cid [...]
    "PrivateLoadBalancerSecurityGroup": {"Type":"AWS::EC2::SecurityGroup","Properties":{"GroupDescription":"Private ELB Security Group with HTTP access on port 80 from the Frontend Fleet only","VpcId":{"Ref":"VPC"},"SecurityGroupIngress":[{"IpProtocol":"tcp","FromPort":"80","ToPort":"80","SourceSecurityGroupId":{"Ref":"FrontendSecurityGroup"}}],"SecurityGroupEgress":[{"IpProtocol":"tcp","FromPort":"80","ToPort":"80","CidrIp":"0.0.0.0/0"}]}},
    "NATIPAddress": {"Type":"AWS::EC2::EIP","DependsOn":"GatewayToInternet","Properties":{"Domain":"vpc","InstanceId":{"Ref":"NATDevice"}}},
    "NAT2IPAddress": {"Type":"AWS::EC2::EIP","DependsOn":"GatewayToInternet","Properties":{"Domain":"vpc","InstanceId":{"Ref":"NAT2Device"}}},
    "BackendSecurityGroup": {"Type":"AWS::EC2::SecurityGroup","Properties":{"GroupDescription":"Allow access from private load balancer and bastion as well as outbound HTTP and HTTPS traffic","VpcId":{"Ref":"VPC"},"SecurityGroupIngress":[{"IpProtocol":"tcp","FromPort":"80","ToPort":"80","SourceSecurityGroupId":{"Ref":"PrivateLoadBalancerSecurityGroup"}}],"SecurityGroupEgress":[{"IpProtocol":"tcp","FromPort":"80","ToPort":"80","CidrIp":"0.0.0.0/0"},{"IpProtocol":"tcp","FromPort":"443","ToPort":"4 [...]
  },
  "Outputs": {
    "xxxBastion": {"Description":"IP Address of the Bastion host","Value":{"Ref":"BastionIPAddress"}},
    "outVPCid": {"Value":{"Ref":"VPC"}},
    "outKeyName": {"Value":{"Ref":"KeyName"}},
    "outCidrMain": {"Value":{"Fn::FindInMap":["SubnetConfig","VPC","CIDR"]}},
    "outSNPublic1id": {"Value":{"Ref":"PublicSubnet"}},
    "outSNPublic2id": {"Value":{"Ref":"Public2Subnet"}},
    "outSNPrivate1id": {"Value":{"Ref":"PrivateSubnet"}},
    "outSNPrivate2id": {"Value":{"Ref":"Private2Subnet"}},
    "outRTB1id": {"Value":{"Ref":"PrivateRouteTable"}},
    "outRTB2id": {"Value":{"Ref":"Private2RouteTable"}},
    "outRTBPub": {"Value":{"Ref":"PublicRouteTable"}}
  }
}
